--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,18 @@ a{
     height: 90px;
     position: fixed;
     z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    & .btn{
+        border: 1px solid var(--site-white);
+        border-radius: 30px;
+        padding: 15px 40px;
+        text-transform: uppercase;
+        font-size: 12px;
+        font-weight: bold;
+        margin-right: 20px;
+    }
 }
 /* #endregion header */
 
