--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    color: var(--site-white);
     list-style: none;
 }
 
@@ -12,6 +11,7 @@
     --site-black: black;
     --site-dark: #080b12;
     --site-primary: #141922;
+    --site-active-link: #adff2f;
     --site-d-gray: #282828;
     --site-gray: #5a5a5a;
     --site-l-gray: #a3a3a3;
@@ -175,6 +175,7 @@ a{
         text-transform: uppercase;
         font-size: 12px;
         font-weight: bold;
+        color: var(--site-white);
         margin-right: 20px;
     }
 }
@@ -193,6 +194,33 @@ body{
     position: absolute;
     padding: 0 1rem;
     padding-top: 7rem;
+
+    & nav{
+        font-size: 13px;
+        font-weight: bold;
+        text-transform: uppercase;
+        & ul {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 24px;
+            & li{
+                margin-bottom: 12px;
+            }
+            & li a{
+                color: var(--site-l-gray);
+            }
+            & li a hr{
+                display: none;
+            }
+            & li a hr.active{
+                display: block;
+                border-color: var(--site-active-link);
+                width: 30px;
+                margin: 5px auto;
+            }
+        }
+    }
 }
 /* #endregion main */
 
