Complete footer and some hover effects

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ a{
     
     & .menu-home{
         margin-bottom: 30px;
-        & li>a{
+        & li a{
             display: flex;
             align-items: center;
             margin-bottom: 12px;
@@ -155,6 +155,9 @@ a{
         }
         }
     }
+    & a h4:hover{
+        color: var(--site-white);
+    }
 }
 /* #endregion sidebar */
 
@@ -182,6 +185,9 @@ a{
         font-weight: bold;
         color: var(--site-white);
         margin-right: 20px;
+    }
+    & .btn:hover{
+        scale: 1.1;
     }
 }
 /* #endregion header */
@@ -213,6 +219,9 @@ body{
             }
             & li a{
                 color: var(--site-l-gray);
+            }
+            & li a:hover{
+                color: var(--site-white);
             }
             & li a hr{
                 display: none;
@@ -276,6 +285,7 @@ body{
 /* #region footer */
 #footer{
     background: var(--site-d-gray);
+    color: var(--site-white);
     width: 100%;
     height: 90px;
     padding: 10px;
@@ -284,7 +294,97 @@ body{
     left: 0;
     display: flex;
     justify-content: space-between;
-    align-items: center;;
+    align-items: center;
+   
+    & .playing{
+        flex: 1;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        & img{
+            width: 36px;
+            aspect-ratio: 1;
+        }
+        .song-info{
+            & h5{
+                font-size: 10px;
+                color: var(--site-l-gray);
+                margin-right: 30px;
+            }
+        }
+        .icons{
+            display: flex;
+            flex-wrap: wrap;
+            gap: 12px;
+            & i{
+                color: var(--site-gray);
+            }
+        }
+    }
+    
+    & .player{
+        flex: 3;
+        & .player-console{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            margin-bottom: 10px;
+            & .fa-circle-play{
+                font-size: 30px;
+                margin: 0 10px;
+            }
+        }
+        & .player-time{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 12px;
+            & .progression-bar{
+                width: 40%;
+                & .bar{
+                    position: relative;
+                    width: 100%;
+                    height: 4px;
+                    border-radius: 4px;
+                    background: var(--site-gray);
+                    & .progression{
+                        position: absolute;
+                        width: 20%;
+                        height: 100%;
+                        border-radius: 4px;
+                        background: var(--site-l-gray);
+                    }
+                }
+            }
+        }
+    }
+
+    & .video-sound{
+        flex: 1;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        gap: 12px;
+        & .progression-bar{
+            width: 60%;
+            & .bar{
+                position: relative;
+                width: 100%;
+                height: 4px;
+                border-radius: 4px;
+                background: var(--site-gray);
+                & .progression{
+                    position: absolute;
+                    width: 20%;
+                    height: 100%;
+                    border-radius: 4px;
+                    background: var(--site-l-gray);
+                }
+            }
+        }
+    }
+
 }
 /* #endregion footer */
 
