Add footer more responsivity

--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,7 @@ a {
 
     & li.active {
         position: relative;
+
         & a {
             color: var(--site-white);
 
@@ -462,6 +463,7 @@ body {
 
             & a {
                 width: 40%;
+                min-width: 120px;
 
                 & .bar {
                     position: relative;
@@ -480,7 +482,7 @@ body {
                 }
             }
 
-            & .progression-bar:hover {
+            & a:hover {
                 & .progression {
                     position: relative;
                     background: var(--site-active-link);
@@ -510,6 +512,7 @@ body {
 
         & a {
             width: 40%;
+            min-width: 100px;
 
             & .bar {
                 position: relative;
@@ -528,7 +531,7 @@ body {
             }
         }
 
-        & .progression-bar:hover {
+        & a:hover {
             & .progression {
                 position: relative;
                 background: var(--site-active-link);
@@ -642,6 +645,12 @@ body {
     #header,
     #main {
         width: calc(100% - 50px);
+    }
+
+    #footer {
+        flex-direction: column;
+        flex-wrap: wrap;
+        height: 200px;
     }
 }
 
